--- a/index.html
+++ b/index.html
@@ -6,13 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Assignment-2</title>
+    <!-- Font awesome -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <!-- Header Start -->
     <header>
         <h2>Influencer Products</h2>
 
     </header>
+    <!-- Header End  -->
+    <main>
+        <section class="section-1">
+            <div class="div-1">
+                <div class="influencer">
+                    <h1>
+                        Star your Journey as Influencer
+                    </h1>
+                    <p>If I'll start as Influencer.It'll be my big life turning point and path.But I want to an Font End
+                        Developer. </p>
+                </div>
+                <div class="div-2">
+                    <img class="img-1" src="images/main-camera.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="logos">
+            <div class="logos-1">
+                <img class="logos-size" src="logos/Alibaba.svg" alt="">
+                <img class="logos-size" src="logos/Amazon.svg" alt="">
+                <img class="logos-size" src="logos/Daraz.pk" alt="">
+                <img class="logos-size" src="logos/Ebay.svg" alt="">
+                <img class="logos-size" src="logos/Rakuten.svg" alt="">
+                <img class="logos-size" src="logos/Target.svg" alt="">
+                <img class="logos-size" src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
+        <!-- blogs start  -->
+        <section class="container">
+            <h3 class="section-title">Popular Collection</h3>
+            <div class="Products">
+                <div>
+                    <article>
+                        <div class="thaumnail">
+                            <img src="images/tripod.png" alt="">
+                        </div>
+                        <div class="product-title"></div>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
