--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Assignment-2</title>
     <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/37fdd259d4.js" crossorigin="anonymous"></script>
+    <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
@@ -30,12 +32,16 @@
                     </h1>
                     <p>If I'll start as Influencer.It'll be my big life turning point and path.But I want to an Font End
                         Developer. </p>
+                    <a class="link-button" target="_blank"
+                        href="https://www.linkedin.com/in/foysal-tuhin-749905229/">Preebook Now <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="div-2">
                     <img class="img-1" src="images/main-camera.png" alt="">
                 </div>
             </div>
         </section>
+        <!-- Logos Start  -->
         <section class="logos">
             <div class="logos-1">
                 <img class="logos-size" src="logos/Alibaba.svg" alt="">
@@ -47,6 +53,8 @@
                 <img class="logos-size" src="logos/Walmart.svg" alt="">
             </div>
         </section>
+        <!-- Logos End  -->
+
         <!-- blogs start  -->
         <section class="container">
             <h3 class="section-title">Popular Collection</h3>
