product info added

--- a/index.html
+++ b/index.html
@@ -59,13 +59,31 @@
         <section class="container">
             <h3 class="section-title">Popular Collection</h3>
             <div class="Products">
-                <div>
-                    <article>
-                        <div class="thaumnail">
-                            <img src="images/tripod.png" alt="">
+                <div class="product">
+                    <div class="product-banner">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <div class="product-title">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i>
+                                </div>
+                                <p>4.99</p>
+                                <div class="producst-text">
+                                    <p>
+                                        Wordwide shifting availableBuyers protection possible!
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="product-title"></div>
-                    </article>
+                    </div>
                 </div>
             </div>
         </section>
