Media Query added

--- a/index.html
+++ b/index.html
@@ -6,88 +6,211 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Assignment-2</title>
-    <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/37fdd259d4.js" crossorigin="anonymous"></script>
-    <!-- google font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- stylesheets -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <!-- Header Start -->
-    <header>
+    <header class="header">
         <h2>Influencer Products</h2>
-
     </header>
     <!-- Header End  -->
-    <main>
-        <section class="section-1">
-            <div class="div-1">
-                <div class="influencer">
-                    <h1>
-                        Star your Journey as Influencer
-                    </h1>
-                    <p>If I'll start as Influencer.It'll be my big life turning point and path.But I want to an Font End
-                        Developer. </p>
-                    <a class="link-button" target="_blank"
-                        href="https://www.linkedin.com/in/foysal-tuhin-749905229/">Preebook Now <i
-                            class="fas fa-arrow-right"></i></a>
-                </div>
-                <div class="div-2">
-                    <img class="img-1" src="images/main-camera.png" alt="">
-                </div>
-            </div>
-        </section>
-        <!-- Logos Start  -->
-        <section class="logos">
-            <div class="logos-1">
-                <img class="logos-size" src="logos/Alibaba.svg" alt="">
-                <img class="logos-size" src="logos/Amazon.svg" alt="">
-                <img class="logos-size" src="logos/Daraz.pk" alt="">
-                <img class="logos-size" src="logos/Ebay.svg" alt="">
-                <img class="logos-size" src="logos/Rakuten.svg" alt="">
-                <img class="logos-size" src="logos/Target.svg" alt="">
-                <img class="logos-size" src="logos/Walmart.svg" alt="">
-            </div>
-        </section>
-        <!-- Logos End  -->
 
-        <!-- blogs start  -->
-        <section class="container">
-            <h3 class="section-title">Popular Collection</h3>
-            <div class="Products">
-                <div class="product">
-                    <div class="product-banner">
-                        <img src="images/tripod.png" alt="">
-                    </div>
-                    <div class="product-detail">
-                        <div class="product-title">
-                            <h3>Flex Tripod</h3>
-                            <p>$50.48</p>
-                            <div class="product-info">
-                                <div>
-                                    <i class="fas fa-star filled"></i>
-                                    <i class="fas fa-star filled"></i>
-                                    <i class="fas fa-star filled"></i>
-                                    <i class="fas fa-star filled"></i>
-                                    <i class="fas fa-star empty"></i>
-                                </div>
-                                <p>4.99</p>
-                                <div class="producst-text">
-                                    <p>
-                                        Wordwide shifting availableBuyers protection possible!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+    <div class="part-1 gallery">
+        <div class="div-1">
+            <div class="influencer">
+                <h1>
+                    Star your Journey as Influencer
+                </h1>
+                <p class="Paragraph">If I'll start as Influencer.It'll be my big life turning point and path.But I want
+                    to an Font End
+                    Developer. </p>
+                <a class="link-button" target="_blank"
+                    href="https://www.linkedin.com/in/foysal-tuhin-749905229/">Preebook Now <i
+                        class="fas fa-arrow-right"></i></a>
             </div>
-        </section>
-    </main>
+            <div class="div-2">
+                <img class="img-1" src="images/main-camera.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Logos Start  -->
+    <div class="logos galler">
+        <div class="logos-style">
+            <img class="logos-size" src="logos/Alibaba.svg" alt="">
+            <img class="logos-size" src="logos/Amazon.svg" alt="">
+            <img class="logos-size" src="logos/Daraz.pk" alt="">
+            <img class="logos-size" src="logos/Ebay.svg" alt="">
+            <img class="logos-size" src="logos/Rakuten.svg" alt="">
+            <img class="logos-size" src="logos/Target.svg" alt="">
+            <img class="logos-size" src="logos/Walmart.svg" alt="">
+        </div>
+    </div>
+    <!-- Logos End  -->
+
+
+
+
+    <!-- blogs start  -->
+
+    <div class="gallery">
+
+        <div class="content">
+            <img class="img-style" src="images/tripod.png" alt="">
+            <h3>Flex Tripod</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$50.48</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-1">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/mic.png" alt="">
+            <h3>MicroPhone</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$120.40</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-2">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/airpod.png" alt="">
+            <h3>Airpuds</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$100.32</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-3">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/drone.png" alt="">
+            <h3>Drone</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$980.48</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-4">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/lights.png" alt="">
+            <h3>Light Setup</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$1200.48</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-5">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/setup.png" alt="">
+            <h3>Photoshoot set</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$820.48</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-6">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/camera.png" alt="">
+            <h3>Vlogging Camera</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$1800.00</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star "></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
+            <button class="buy-7">Buy Now</button>
+        </div>
+
+
+        <div class="content">
+            <img class="img-style" src="images/action.png" alt="">
+            <h3>Action Camera</h3>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            <h6>$380.22</h6>
+            <ul>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+                <li><i class="fa fa-star checked"></i></li>
+            </ul>
+            <button class="buy-8">Buy Now</button>
+        </div>
+
+
+
+    </div>
+
 </body>
 
 </html>
