--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Assignment-2</title>
     <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/37fdd259d4.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -207,9 +209,24 @@
             <button class="buy-8">Buy Now</button>
         </div>
 
-
-
     </div>
+
+
+    <footer>
+
+        <div class="footer-content">
+            <h3>Influencer products</h3>
+            <ul class="socials">
+                <li><a href=""><i class="fab fa-instagram-square"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li><a href=""><i class="fab fa-youtube"></i></a></li>
+            </ul>
+            <div class="footer-buttom">
+                <p>Copyright &copy;2022</p>
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 
