--- a/index.html
+++ b/index.html
@@ -210,24 +210,14 @@
         </div>
 
     </div>
-
-
-    <footer>
-
-        <div class="footer-content">
-            <h3>Influencer products</h3>
-            <ul class="socials">
-                <li><a href=""><i class="fab fa-instagram-square"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                <li><a href=""><i class="fab fa-youtube"></i></a></li>
-            </ul>
-            <div class="footer-buttom">
-                <p>Copyright &copy;2022</p>
-            </div>
-        </div>
-
+    <footer class="footer">
+        <h1>Influencer products</h1>
+        <p>Copyright © 2020 influencer products</p>
+        <h6>All rights reserved</h6>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
     </footer>
-
 </body>
 
 </html>
